--- a/CustomMoodle/Views/Departments/Index.cshtml
+++ b/CustomMoodle/Views/Departments/Index.cshtml
@@ -1,8 +1,53 @@
-﻿@model object
-
+﻿@model IEnumerable<Domain.Entities.Department>
 @{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
+    ViewData["Title"] = "Departments";
 }
 
 <h2>Departments</h2>
+@if (!string.IsNullOrEmpty(ViewData["ErrorMessage"]?.ToString()))
+{
+    <div class="alert alert-danger">
+        <strong>Error!</strong> @ViewData["ErrorMessage"]
+    </div>
+}
+@if (!string.IsNullOrEmpty(ViewData["SuccessMessage"]?.ToString()))
+{
+    <div class="alert alert-success">
+        <strong>Success!</strong> @ViewData["SuccessMessage"]
+    </div>
+}
+<table class="table">
+    <thead>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StartDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Instructor)
+        </th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StartDate)
+            </td>
+            <td>
+                @item.Instructor.LastName @item.Instructor.FirstName @item.Instructor.SecondName
+            </td>
+            <td>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
