Initial commit 80% done

--- a/CustomMoodle/Views/Shared/_Layout.cshtml
+++ b/CustomMoodle/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <li><a asp-controller="Courses" asp-action="Index">Courses</a></li>
                     <li><a asp-controller="Instructors" asp-action="Index">Instructors</a></li>
                     <li><a asp-controller="Departments" asp-action="Index">Departments</a></li>
+                    <li><a asp-controller="Assignments" asp-action="Index">Assignments</a></li>
                 </ul>
                 <partial name="_LoginPartial.cshtml" /> 
 
