--- a/CustomMoodle/Views/Courses/Index.cshtml
+++ b/CustomMoodle/Views/Courses/Index.cshtml
@@ -6,6 +6,15 @@
 }
 
 <h2>Courses</h2>
+@if (ViewBag.Message != null)
+{
+    <div class="alert alert-@ViewBag.Message.Type alert-dismissible fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <p>@ViewBag.Message.AlertMessage</p>
+    </div>
+}
 
 <table class="table">
     <thead>
